--- a/lang/category_lite_bg.txt
+++ b/lang/category_lite_bg.txt
@@ -13,5 +13,9 @@
 Мемори Карта ™
 Вътрешна памет
 И двете
+Sort categories
+Allows sorting categories using CAT_XX or XXhomebrew.
+No
+Yes
 Некатегоризирани
 По категория
