--- a/lang/category_lite_ja.txt
+++ b/lang/category_lite_ja.txt
@@ -1,21 +1,21 @@
 カテゴリーモード
-カテゴリの表示方法を選択します。
+カテゴリーの表示方法を選択します。
 複数MS
 コンテキストメニュー
 フォルダ
 カテゴリー接頭辞
-「CAT_」接頭辞を使ってカテゴリフォルダを他のフォルダから見分けます。
+「CAT_」接頭辞を使用してカテゴリーフォルダを他のフォルダと区別します。
 なし
-CAT_を使用する
+「CAT_」を使用する
 未分類を表示する
-「未分類」のカテゴリをXMBで表示します。
+「未分類」のカテゴリーをXMBで表示します。
 いいえ
 メモリースティックのみ
 内部ストレージのみ
 両方
-Sort categories
-Allows sorting categories using CAT_XX or XXhomebrew.
-No
-Yes
+カテゴリーを並べ替え
+「CAT_XX」「XXhomebrew」を使用してカテゴリーを並べ替えます。
+いいえ
+はい
 未分類
-カテゴリで
+カテゴリーで
