--- a/lang/category_lite_ja.txt
+++ b/lang/category_lite_ja.txt
@@ -1,21 +1,21 @@
-カテゴリーモード
-カテゴリーの表示方法を選択します。
+カテゴリモード
+カテゴリの表示方法を選択します。
 複数MS
 コンテキストメニュー
 フォルダ
-カテゴリー接頭辞
-「CAT_」接頭辞を使用してカテゴリーフォルダを他のフォルダと区別します。
+カテゴリ接頭辞
+「CAT_」接頭辞を使用してカテゴリフォルダを他のフォルダと区別します。
 なし
 「CAT_」を使用する
 未分類を表示する
-「未分類」のカテゴリーをXMBで表示します。
+「未分類」のカテゴリをXMBで表示します。
 いいえ
 メモリースティックのみ
 内部ストレージのみ
 両方
-カテゴリーを並べ替え
-「CAT_XX」「XXhomebrew」を使用してカテゴリーを並べ替えます。
+カテゴリを並べ替え
+「CAT_XX」「XXhomebrew」を使用してカテゴリを並べ替えます。
 いいえ
 はい
 未分類
-カテゴリーで
+カテゴリで
