Revert "Improve categori_lite_ja.txt"
This reverts commit e3f0845e7a0eaaba91fe8d4b92e36f1134a3d495.

--- a/lang/category_lite_ja.txt
+++ b/lang/category_lite_ja.txt
@@ -2,20 +2,20 @@
 カテゴリの表示方法を選択します。
 複数MS
 コンテキストメニュー
-フォルダー
-カテゴリの接頭辞
-「CAT_」接頭辞のフォルダのみ認識します。
-使用しない
-使用する
+フォルダ
+カテゴリ接頭辞
+「CAT_」接頭辞を使用してカテゴリフォルダを他のフォルダと区別します。
+なし
+「CAT_」を使用する
 未分類を表示する
 「未分類」のカテゴリをXMBで表示します。
-表示しない
-メモリースティック™のみ
+いいえ
+メモリースティックのみ
 内部ストレージのみ
 両方
-カテゴリの並べ替え
-「CAT_XX」や「XXフォルダ名」を使用してカテゴリを並べ替えます。
-使用する
-使用しない
+カテゴリを並べ替え
+「CAT_XX」「XXhomebrew」を使用してカテゴリを並べ替えます。
+いいえ
+はい
 未分類
-カテゴリ
+カテゴリで
