--- a/lang/category_lite_ru.txt
+++ b/lang/category_lite_ru.txt
@@ -1,21 +1,21 @@
-Режим отображения
-Выберите режим отображения категорий в меню Игра
-Карты Памяти
-Контекстное Меню
+Режим категорий
+Выбор режима отображения категорий для игр или хоумбрю. 
+Несколько MS
+Контекстное меню
 Папки
-Префикс для Категорий
-Использование префикса "CAT_" для опознавания категорий
-Да
+Префикс для категорий
+Использование префикса "CAT_" для опознавания категорий.
 Нет
-Контент вне Категорий
-Отображение приложений, не попавших в категории
+Да
+Контент вне категорий
+Отображение приложений, не попавших в категории.
 Не показывать
-Карта Памяти
-Память Системы
+Только Memory Stick™
+Только память системы
 Оба вида
-Сортировка Категорий
-Сортировка по префиксу CAT_XX или XXhomebrew в названиях категорий
+Сортировка категорий
+Сортировка категорий по префиксу CAT_XX или XXhomebrew.
 Нет
 Да
-Без Категорий
-По Категориям
+Вне категорий
+По категориям
