Even better Russian translation

--- a/lang/category_lite_ru.txt
+++ b/lang/category_lite_ru.txt
@@ -1,17 +1,17 @@
-Режим категорий
-Выбор режима отображения категорий для игр или хоумбрю. 
-Несколько MS
+Режим отображения категорий
+Выбор режима отображения категорий приложений. 
+Несколько карт памяти
 Контекстное меню
-Папки
+Папки в карте памяти
 Префикс для категорий
 Использование префикса "CAT_" для опознавания категорий.
 Нет
 Да
 Контент вне категорий
-Отображение приложений, не попавших в категории.
+Отображение приложений, не попавших в категории, например тех, что находятся в каталоге "PSP/GAME/".
 Не показывать
-Только Memory Stick™
-Только память системы
+Только с карты памяти
+Только из памяти системы
 Оба вида
 Сортировка категорий
 Сортировка категорий по префиксу CAT_XX или XXhomebrew.
